--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <title>Alexander Shevtsov</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
     <script src="/assets/js/main.js"></script>
-
   </head>
   <body>
       <nav>
@@ -97,6 +96,8 @@ library dependencies. Here are some examples:</p>
 </ol>
 
 <p>In 2019 I worked as a blockchain developer for <a href="https://dexpa.io/">dexpa.io</a>, porting Ethereum smart-contracts to the <a href="https://test.ton.org/">TON</a> blockchain and communicating with <a href="https://tonlabs.io/">TON labs</a> to help them test and debug SDKs they are creating.</p>
+
+<p>Later, 2019-2020 security anaylist at <a href="https://futurecomes.com/">FutureComes</a>, making security audits for web and crypto projects (wallets, exchanges and exchange services).</p>
 
 <h3 id="also">Also</h3>
 <ol>
