--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@ library dependencies. Here are some examples:</p>
 
 <p>Later, 2019-2020 security anaylist at <a href="https://futurecomes.com/">FutureComes</a>, making security audits for web and crypto projects (wallets, exchanges and exchange services).</p>
 
+<p>For now (summer 2020) I’m involved in <a href="https://handshake.org/">Handshake</a> project.</p>
+
 <h3 id="also">Also</h3>
 <ol>
   <li><a name="articles"> Educational cryptography articles</a>
