--- a/about/index.html
+++ b/about/index.html
@@ -19,11 +19,16 @@
   
     <a href="/" >Home</a>
   
+    <a href="/blog/" >Blog</a>
+  
 </nav>
 
  
      
 <a style="font-weight: bold;" href=" /about/ ">en</a> |
+  
+     
+<a  href=" /ru/about/ ">ru</a> |
   
 
       <p>hello world</p>
