--- a/index.html
+++ b/index.html
@@ -19,11 +19,16 @@
   
     <a href="/" class="current">Home</a>
   
+    <a href="/blog/" >Blog</a>
+  
 </nav>
 
  
      
 <a style="font-weight: bold;" href=" / ">en</a> |
+  
+     
+<a  href=" /ru/ ">ru</a> |
   
 
       <!-- Хули палишь? -->
