--- a/pizda.html
+++ b/pizda.html
@@ -10,7 +10,7 @@
       gtag('config', 'UA-157721779-2');
     </script>
     <meta charset="utf-8">
-    <title></title>
+    <title>PIZDOS</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
     <script src="/assets/js/main.js"></script>
   </head>
@@ -25,15 +25,18 @@
 
  
      
-<a style="font-weight: bold;" href=" /404.html ">en</a> |
+<a style="font-weight: bold;" href=" /pizda ">en</a> |
   
      
-<a  href=" /ru/404.html ">ru</a> |
+<a  href=" /ru/pizda ">ru</a> |
   
 
-      <p>There is no such page. You may page in another language version.</p>
+      <h1>PIZDOS</h1>
+<p>24 Jun 2020 </p>
 
-<p>Такой страницы нет. Вы можете попробовать другую языковую версию.</p>
+<p>вот это ебануло нахуй</p>
+
+
 
   </body>
 </html>
