--- a/index.html
+++ b/index.html
@@ -47,14 +47,18 @@
 <p>For me education is in some sense broadening the horizons, so my studies vary from linguistics and cryptography to quantum physics and cosmology. Still, I’d introduce myself as a mathematician.</p>
 
 <p>Graduated from Belarusian State University with bachelor’s degree thesis: the density of Cartan subalgebras in the variety of abelian subalgebras of complex semisimple Lie algebras.
-Currently I’m on the final year of master’s degree in mathematics at <a href="https://math.hse.ru/en/">HSE faculty of mathematics</a> with 1st year term paper topic: structure of the automorphism group of a finite-dimensional associative algebra.</p>
+Then I’ve spent a year on master’s programme in mathematics at <a href="https://math.hse.ru/en/">HSE faculty of mathematics</a> with term paper topic: structure of the automorphism group of a finite-dimensional associative algebra.</p>
 
-<!--
+<p>Next, I proceeded education on <a href="http://master.math.univ-paris-diderot.fr/en/annee/m2-lmfi/">Master’s in Mathematical Logic and Foundations of Computer
+Science</a> in University of Paris which hopefully will shed
+light on few bothering questions about the so-called concept of information. 
+&lt;!–</p>
 <div>
 My mathematical background starts with a solid foundation in topology, algebra and analysis, proceeding with further knowledge of
  differential geometry, algebraic geometry, <div class="tooltip">Lie theory<span class="tooltiptext" style="width: 120%">it has nothing in common with the falsehood</span></div>, category theory, computer science, model theory, classical physics
 as well as <div class="tooltip">general relativity and quantum physics <span class="tooltiptext">these fields are not less mathematics than physics</span></div> and computational mathematics. I hate advanced branches of analysis, though.
-</div> -->
+</div>
+<p>–&gt;</p>
 
 <div>
 My mathematical background starts with a solid foundation in topology, algebra and analysis, proceeding with further knowledge of
@@ -67,6 +71,8 @@ Arjantsev’s</a> (he’s the scientific advisor of mine) seminar on the additiv
 actions, and participated in <a href="https://en.wikipedia.org/wiki/Dessin_d%27enfant">dessin d’enfant</a> seminar of <a href="http://www.mathnet.ru/person19967">George
 Shabat</a> in the past.
 I’ve also took few courses at <a href="http://ium.mccme.ru">Independent University of Moscow</a>.</p>
+
+<p>After</p>
 
 <h3 id="business">Business</h3>
 
