--- a/index.html
+++ b/index.html
@@ -50,15 +50,8 @@
 Then I’ve spent a year on master’s programme in mathematics at <a href="https://math.hse.ru/en/">HSE faculty of mathematics</a> with term paper topic: structure of the automorphism group of a finite-dimensional associative algebra.</p>
 
 <p>Next, I proceeded education on <a href="http://master.math.univ-paris-diderot.fr/en/annee/m2-lmfi/">Master’s in Mathematical Logic and Foundations of Computer
-Science</a> in University of Paris which hopefully will shed
-light on few bothering questions about the so-called concept of information. 
-&lt;!–</p>
-<div>
-My mathematical background starts with a solid foundation in topology, algebra and analysis, proceeding with further knowledge of
- differential geometry, algebraic geometry, <div class="tooltip">Lie theory<span class="tooltiptext" style="width: 120%">it has nothing in common with the falsehood</span></div>, category theory, computer science, model theory, classical physics
-as well as <div class="tooltip">general relativity and quantum physics <span class="tooltiptext">these fields are not less mathematics than physics</span></div> and computational mathematics. I hate advanced branches of analysis, though.
-</div>
-<p>–&gt;</p>
+Science</a> in University of Paris which will hopefully shed
+light on few bothering questions about the so-called concept of information.</p>
 
 <div>
 My mathematical background starts with a solid foundation in topology, algebra and analysis, proceeding with further knowledge of
