--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <p>Graduated from Belarusian State University with bachelor’s degree thesis: the density of Cartan subalgebras in the variety of abelian subalgebras of complex semisimple Lie algebras.
 Then I’ve spent a year on master’s programme in mathematics at <a href="https://math.hse.ru/en/">HSE faculty of mathematics</a> with term paper topic: structure of the automorphism group of a finite-dimensional associative algebra.</p>
 
-<p>Next, I proceeded education on <a href="http://master.math.univ-paris-diderot.fr/en/annee/m2-lmfi/">Master’s in Mathematical Logic and Foundations of Computer
+<p>Next (2020), I proceeded education on <a href="http://master.math.univ-paris-diderot.fr/en/annee/m2-lmfi/">Master’s in Mathematical Logic and Foundations of Computer
 Science</a> in University of Paris which will hopefully shed
 light on few bothering questions about the so-called concept of information.</p>
 
@@ -59,13 +59,11 @@ My mathematical background starts with a solid foundation in topology, algebra a
 as well as <div aria-label="these fields are not less mathematics than physics" data-balloon-pos="up">general relativity and quantum physics</div> and computational mathematics. I hate advanced branches of analysis, though.
 </div>
 
-<p>Sometimes I participate algebra-related seminars of <a href="http://mms.mathnet.ru/">Moscow Mathematical Society</a>, <a href="https://www.hse.ru/en/staff/arjantsev">Ivan
-Arjantsev’s</a> (he’s the scientific advisor of mine) seminar on the additive group
+<p>I’ve participated algebra-related seminars of <a href="http://mms.mathnet.ru/">Moscow Mathematical Society</a>, <a href="https://www.hse.ru/en/staff/arjantsev">Ivan
+Arjantsev’s</a> (he was the scientific advisor of mine) seminar on the additive group
 actions, and participated in <a href="https://en.wikipedia.org/wiki/Dessin_d%27enfant">dessin d’enfant</a> seminar of <a href="http://www.mathnet.ru/person19967">George
 Shabat</a> in the past.
 I’ve also took few courses at <a href="http://ium.mccme.ru">Independent University of Moscow</a>.</p>
-
-<p>After</p>
 
 <h3 id="business">Business</h3>
 
@@ -103,7 +101,8 @@ library dependencies. Here are some examples:</p>
 
 <p>Later, 2019-2020 security anaylist at <a href="https://futurecomes.com/">FutureComes</a>, making security audits for web and crypto projects (wallets, exchanges and exchange services).</p>
 
-<p>For now (summer 2020) I’m involved in <a href="https://handshake.org/">Handshake</a> project, but I’m open for interesting proposals.</p>
+<p>For now (2020) I’m involved in <a href="https://handshake.org/">Handshake</a> project, both wokring on the protocol and the node
+themsevles and also on commercial applications and usage of this technology. Nevertheless I’m open for interesting proposals.</p>
 
 <h3 id="also">Also</h3>
 <ol>
