--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   
     <a href="/" class="current">Home</a>
   
+    <a href="/blog/" >Blog</a>
   
 </nav>
 
@@ -50,7 +51,7 @@ Then I’ve spent a year on master’s programme in mathematics at <a href="http
 
 <p>Next (2020), I proceeded education on <a href="http://master.math.univ-paris-diderot.fr/en/annee/m2-lmfi/">Master’s in Mathematical Logic and Foundations of Computer
 Science</a> in University of Paris which will hopefully shed
-light on few bothering questions about the so-called concept of information.</p>
+light on few bothering questions about information theory and computer science.</p>
 
 <div>
 My mathematical background starts with a solid foundation in topology, algebra and analysis, proceeding with further knowledge of
@@ -100,8 +101,8 @@ library dependencies. Here are some examples:</p>
 
 <p>Later, 2019-2020 security anaylist at <a href="https://futurecomes.com/">FutureComes</a>, making security audits for web and crypto projects (wallets, exchanges and exchange services).</p>
 
-<p>For now (2020) I’m involved in <a href="https://handshake.org/">Handshake</a> project, both working on the protocol and the node
-and also on commercial applications and usage of this technology. Nevertheless I’m open for interesting proposals.</p>
+<p>For now (2020) I’m involved in <a href="https://handshake.org/">Handshake</a> project, both wokring on the protocol and the node
+themsevles and also on commercial applications and usage of this technology. Nevertheless I’m open for interesting proposals.</p>
 
 <h3 id="also">Also</h3>
 <ol>
