--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@ library dependencies. Here are some examples:</p>
 
 <p>For now (year 2020) I’m involved in <a href="https://handshake.org/">Handshake</a> project, working on the protocol
   and the node, and also on the commercial applications of this technology. For instance, you can check out HNS block
-  explorer we've created: <a href="https://hnsnetwork.com/">hnsnetwork.com</a>. Nevertheless, I’m open for interesting proposals.</p>
+  explorer we've created: <a href="https://hnsnetwork.com/">hnsnetwork.com</a>.</p>
+
+<p>Nevertheless, I’m open for interesting proposals.</p>
 
 <h3 id="also">Also</h3>
 <ol>
