--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
 <a  href=" /ru/404.html ">ru</a> |
   
 
-      <p>There is no such page. You may page in another language version.</p>
+      <p>There is no such page. You may try this page in another language.</p>
 
 <p>Такой страницы нет. Вы можете попробовать другую языковую версию.</p>
 
