--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
 <p>Graduated from Belarusian State University with bachelor’s degree thesis: the density of Cartan subalgebras in the variety of abelian subalgebras of complex semisimple Lie algebras.
 Then I’ve spent a year on master’s programme in mathematics at <a href="https://math.hse.ru/en/">HSE faculty of mathematics</a> with term paper topic: structure of the automorphism group of a finite-dimensional associative algebra.</p>
 
-<p>Next (2020), I proceeded education on <a href="http://master.math.univ-paris-diderot.fr/en/annee/m2-lmfi/">Master’s in Mathematical Logic and Foundations of Computer
-Science</a> in University of Paris which will hopefully shed
-light on few bothering questions about information theory and computer science.</p>
+<p>Now (2020), I'm on <a href="http://master.math.univ-paris-diderot.fr/en/annee/m2-lmfi/">Master’s in Mathematical Logic and Foundations of Computer Science</a> in University of Paris.</p>
 
 <div>
 My mathematical background starts with a solid foundation in topology, algebra and analysis, proceeding with further knowledge of
@@ -100,9 +98,10 @@ library dependencies. Here are some examples:</p>
 
 <p>Later, 2019-2020 security anaylist at <a href="https://futurecomes.com/">FutureComes</a>, making security audits for web and crypto projects (wallets, exchanges and exchange services).</p>
 
-<p>For now (year 2020) I’m involved in <a href="https://handshake.org/">Handshake</a> project, working on the protocol
+<p>During summer 2020 I was involved in <a href="https://handshake.org/">Handshake</a> project, working on the protocol
   and the node, and also on the commercial applications of this technology. For instance, you can check out HNS block
-  explorer we've created: <a href="https://hnsnetwork.com/">hnsnetwork.com</a>.</p>
+  explorer we've created: <a href="https://hnsnetwork.com/">hnsnetwork.com</a>. I've also built a tool for smart bidding
+on hansdahske auctions, which can be shown upon request.</p> 
 
 <p>Nevertheless, I’m open for interesting proposals.</p>
 
@@ -125,7 +124,7 @@ library dependencies. Here are some examples:</p>
 <p><a href="mailto:randomlogin76@gmail.com"><img src="/assets/images/email.png" alt="logo" /></a>
 <a href="https://t.me/randomlogin"><img src="/assets/images/telegram.svg" alt="logo" /></a></p>
 
-<p>Current location: Moscow, Russia.</p>
+<p>Current location: Paris, France.</p>
 
 <h2 id="key">Key</h2>
 <p>My key for private communication. Only I can read the encrypted text. Just in case.</p>
