--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ library dependencies. Here are some examples:</p>
   explorer we've created: <a href="https://hnsnetwork.com/">hnsnetwork.com</a>. I've also built a tool for smart bidding
 on hansdahske auctions, which can be shown upon request.</p> 
 
-<p>Nevertheless, I’m open for interesting proposals.</p>
+<p>I’m open for interesting proposals.</p>
 
 <h3 id="also">Also</h3>
 <ol>
