--- a/404.html
+++ b/404.html
@@ -18,7 +18,6 @@
       <nav>
   
     <a href="/" >Home</a>
- 
   
 </nav>
 
@@ -30,7 +29,7 @@
 <a  href=" /ru/404.html ">ru</a> |
   
 
-      <p>There is no such page. You may try this page in another language.</p>
+      <p>There is no such page. You may page in another language version.</p>
 
 <p>Такой страницы нет. Вы можете попробовать другую языковую версию.</p>
 
