--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
   
     <a href="/" class="current">Home</a>
   
-  
 </nav>
 
  
@@ -48,7 +47,7 @@
 <p>Graduated from Belarusian State University with bachelor’s degree thesis: the density of Cartan subalgebras in the variety of abelian subalgebras of complex semisimple Lie algebras.
 Then I’ve spent a year on master’s programme in mathematics at <a href="https://math.hse.ru/en/">HSE faculty of mathematics</a> with term paper topic: structure of the automorphism group of a finite-dimensional associative algebra.</p>
 
-<p>Now (2020), I'm on <a href="http://master.math.univ-paris-diderot.fr/en/annee/m2-lmfi/">Master’s in Mathematical Logic and Foundations of Computer Science</a> in University of Paris.</p>
+<p>Now (2020-2021), I’m on <a href="http://master.math.univ-paris-diderot.fr/en/annee/m2-lmfi/">Master’s in Mathematical Logic and Foundations of Computer Science</a> in University of Paris.</p>
 
 <div>
 My mathematical background starts with a solid foundation in topology, algebra and analysis, proceeding with further knowledge of
@@ -84,7 +83,7 @@ the <a href="https://en.bitcoinwiki.org/wiki/DPoS">DPoS</a> consensus algorithm,
 services like built-in name service, state machine proxy, broad and delegateable account rights, and innovative funding
 <a href="#ido">approach</a>. My participation
 included cryptography consulting, virtual machine workflow (backward compatibility with the Ethereum smart-contracts), key
-management, economics and security from the game theory perspective. The project was backed by <a href="https://krypton.capital">venture capital fund</a>.</p>
+management, economics and security from the game theory perspective. The project was backed by venture capital fund.</p>
 
 <p>I really enjoyed creating smart contracts, as they are tiny, very efficient and independent pieces of code demanding no
 library dependencies. Here are some examples:</p>
@@ -98,10 +97,10 @@ library dependencies. Here are some examples:</p>
 
 <p>Later, 2019-2020 security anaylist at <a href="https://futurecomes.com/">FutureComes</a>, making security audits for web and crypto projects (wallets, exchanges and exchange services).</p>
 
-<p>During summer 2020 I was involved in <a href="https://handshake.org/">Handshake</a> project, working on the protocol
-  and the node, and also on the commercial applications of this technology. For instance, you can check out HNS block
-  explorer we've created: <a href="https://hnsnetwork.com/">hnsnetwork.com</a>. I've also built a tool for smart bidding
-on hansdahske auctions, which can be shown upon request.</p> 
+<p>Now I’m involved in <a href="https://handshake.org/">Handshake</a> project, working on the protocol
+and the node, and also on the commercial applications of this technology. For instance, you can check out HNS block
+explorer we’ve created: <a href="https://hnsnetwork.com">hnsnetwork.com</a>. I’ve also built a tool for smart bidding
+on hansdahske auctions, which some day will become public.</p>
 
 <p>I’m open for interesting proposals.</p>
 
@@ -124,7 +123,7 @@ on hansdahske auctions, which can be shown upon request.</p>
 <p><a href="mailto:randomlogin76@gmail.com"><img src="/assets/images/email.png" alt="logo" /></a>
 <a href="https://t.me/randomlogin"><img src="/assets/images/telegram.svg" alt="logo" /></a></p>
 
-<p>Current location: Paris, France.</p>
+<p>Current location: Moscow, Russia.</p>
 
 <h2 id="key">Key</h2>
 <p>My key for private communication. Only I can read the encrypted text. Just in case.</p>
