--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ My mathematical background starts with a solid foundation in topology, algebra a
 as well as <div aria-label="these fields are not less mathematics than physics" data-balloon-pos="up">general relativity and quantum physics</div> and computational mathematics. I hate advanced branches of analysis, though.
 </div>
 
-<p>I’ve participated algebra-related seminars of <a href="http://mms.mathnet.ru/">Moscow Mathematical Society</a>, <a href="https://www.hse.ru/en/staff/arjantsev">Ivan
+<p>I’ve participated in algebra-related seminars of <a href="http://mms.mathnet.ru/">Moscow Mathematical Society</a>, <a href="https://www.hse.ru/en/staff/arjantsev">Ivan
 Arjantsev’s</a> (he was the scientific advisor of mine) seminar on the additive group
 actions, and participated in <a href="https://en.wikipedia.org/wiki/Dessin_d%27enfant">dessin d’enfant</a> seminar of <a href="http://www.mathnet.ru/person19967">George
 Shabat</a> in the past.
