--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <p>Graduated from Belarusian State University with bachelor’s degree thesis: the density of Cartan subalgebras in the variety of abelian subalgebras of complex semisimple Lie algebras.
 Then I’ve spent a year on master’s programme in mathematics at <a href="https://math.hse.ru/en/">HSE faculty of mathematics</a> with term paper topic: structure of the automorphism group of a finite-dimensional associative algebra.</p>
 
-<p>Now (2020-2021), I’m on <a href="http://master.math.univ-paris-diderot.fr/en/annee/m2-lmfi/">Master’s in Mathematical Logic and Foundations of Computer Science</a> at University of Paris.</p>
+<p>Now (2020-2021), I’m on <a href="http://master.math.univ-paris-diderot.fr/en/annee/m2-lmfi/">Master’s in Mathematical Logic and Foundations of Computer Science</a> in University of Paris.</p>
 
 <div>
 My mathematical background starts with a solid foundation in topology, algebra and analysis, proceeding with further knowledge of
@@ -55,7 +55,7 @@ My mathematical background starts with a solid foundation in topology, algebra a
 as well as <div aria-label="these fields are not less mathematics than physics" data-balloon-pos="up">general relativity and quantum physics</div> and computational mathematics. I hate advanced branches of analysis, though.
 </div>
 
-<p>I’ve participated in algebra-related seminars of <a href="http://mms.mathnet.ru/">Moscow Mathematical Society</a>, <a href="https://www.hse.ru/en/staff/arjantsev">Ivan
+<p>I’ve participated algebra-related seminars of <a href="http://mms.mathnet.ru/">Moscow Mathematical Society</a>, <a href="https://www.hse.ru/en/staff/arjantsev">Ivan
 Arjantsev’s</a> (he was the scientific advisor of mine) seminar on the additive group
 actions, and participated in <a href="https://en.wikipedia.org/wiki/Dessin_d%27enfant">dessin d’enfant</a> seminar of <a href="http://www.mathnet.ru/person19967">George
 Shabat</a> in the past.
@@ -97,10 +97,10 @@ library dependencies. Here are some examples:</p>
 
 <p>Later, 2019-2020 security anaylist at <a href="https://futurecomes.com/">FutureComes</a>, making security audits for web and crypto projects (wallets, exchanges and exchange services).</p>
 
-<p>Now I’m involved in <a href="https://handshake.org/">Handshake</a> project, working on the protocol
-and the node, and also on the commercial applications of this technology. For instance, you can check out HNS block
-explorer we’ve created: <a href="https://hnsnetwork.com">hnsnetwork.com</a>. I’ve also built a tool for smart bidding
-on hansdahske auctions, which some day will become public.</p>
+<p>I’ve been a bit involved in <a href="https://handshake.org/">Handshake</a> project, with tiny contribution to the node and protocol
+and the node, as well as public block explorer: <a href="https://hnsnetwork.com">hnsnetwork.com</a>.</p>
+
+<p>Now (2021) I’m mostly doing ethereum-related development.</p>
 
 <p>I’m open for interesting proposals.</p>
 
@@ -123,7 +123,7 @@ on hansdahske auctions, which some day will become public.</p>
 <p><a href="mailto:randomlogin76@gmail.com"><img src="/assets/images/email.png" alt="logo" /></a>
 <a href="https://t.me/randomlogin"><img src="/assets/images/telegram.svg" alt="logo" /></a></p>
 
-<p>Current location: Moscow, Russia.</p>
+<p>Current location: Paris, France.</p>
 
 <h2 id="key">Key</h2>
 <p>My key for private communication. Only I can read the encrypted text. Just in case.</p>
