--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@ library dependencies. Here are some examples:</p>
 
 <p>Later, 2019-2020 security anaylist at <a href="https://futurecomes.com/">FutureComes</a>, making security audits for web and crypto projects (wallets, exchanges and exchange services).</p>
 
-<p>I’ve been a bit involved in <a href="https://handshake.org/">Handshake</a> project, with tiny contribution to the node and protocol
-and the node, as well as public block explorer: <a href="https://hnsnetwork.com">hnsnetwork.com</a>.</p>
+<p>I’ve been a bit involved in <a href="https://handshake.org/">Handshake</a> project, with tiny contribution to the node and protocol, as well as public block explorer: <a href="https://hnsnetwork.com">hnsnetwork.com</a>.</p>
 
 <p>Now (2021) I’m mostly doing ethereum-related development.</p>
 
