--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@ library dependencies. Here are some examples:</p>
 
 <p>I’ve been a bit involved in <a href="https://handshake.org/">Handshake</a> project, with tiny contribution to the node and protocol. I’ve also (not solely) built public block explorer: <a href="https://hnsnetwork.com">hnsnetwork.com</a>.</p>
 
-<p>Now (2021) I’m mostly doing ethereum-related development.</p>
-
+<p>Now (2021) I’m mostly doing ethereum-related development. For example NFT projects: <a href="https://exponentials.art/">Exponentials</a>, <a href="https://logarithms.art/">Logarithms</a> </p>
+    
 <p>I’m open for interesting proposals.</p>
 
 <h3 id="also">Also</h3>
