--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <img src="/assets/images/bw_myself2.jpg" class="img-top" />
 </div>
 
-<h2 id="hej-hej">Hej-hej!</h2>
+<h2 id="hej-hej">Hej!</h2>
 <p>You are at the personal webpage of Alexander Shevtsov.</p>
 
 <h2 id="bio">Bio</h2>
