--- a/index.html
+++ b/index.html
@@ -42,26 +42,29 @@
 <h2 id="bio">Bio</h2>
 
 <h3 id="academic-and-education">Academic and education</h3>
-<p>For me education is in some sense broadening the horizons, so my studies vary from linguistics and cryptography to quantum physics and cosmology. Still, I’d introduce myself as a mathematician.</p>
+<p>Gaining knoweldge seems natural to me and I had interest in many things, varying from linguistics and cryptography to quantum physics and cosmology. Still, I’d introduce myself as a mathematician.</p>
 
 <p>Graduated from Belarusian State University with bachelor’s degree thesis: the density of Cartan subalgebras in the variety of abelian subalgebras of complex semisimple Lie algebras.
 Then I’ve spent a year on master’s programme in mathematics at <a href="https://math.hse.ru/en/">HSE faculty of mathematics</a> with term paper topic: structure of the automorphism group of a finite-dimensional associative algebra.</p>
 
-<p>Now (2021-2022), I’m on <a href="http://master.math.univ-paris-diderot.fr/en/annee/m2-lmfi/">Master’s in Mathematical
-    Logic and Foundations of Computer Science</a> in University of Paris. Master's paper on the topic of Algorithmic
-  Randomness.</p>
+<p>In 2022 I’'ve finished <a href="http://master.math.univ-paris-diderot.fr/en/annee/m2-lmfi/">Master’s in Mathematical
+    Logic and Foundations of Computer Science</a> at University of Paris. Master's paper is about <a href ="/materials/algorithmic_randomness.pdf">Algorithmic randomness</a>.</p>
 
 <div>
-My mathematical background starts with a solid foundation in topology, algebra and analysis, proceeding with further knowledge of
- differential geometry, algebraic geometry, <div style="display: inline" aria-label="it has nothing in common with the falsehood" data-balloon-pos="up">Lie theory</div>, category theory, computer science, model theory, classical physics
-as well as <div aria-label="these fields are not less mathematics than physics" data-balloon-pos="up">general relativity and quantum physics</div> and computational mathematics. I hate advanced branches of analysis, though.
+My mathematical background with usual fields like topology, algebra and analysis, differential and algebraic geometry, <div style="display: inline" aria-label="it has nothing in common with the
+ falsehood" data-balloon-pos="up">Lie theory</div>, category theory, theoretical computer science, logic, model theory, classical physics
+as well as a bit of <div aria-label="these fields are not less mathematics than physics" data-balloon-pos="up">relativity and quantum physics</div> and computational mathematics.
 </div>
 
 <p>I’ve participated algebra-related seminars of <a href="http://mms.mathnet.ru/">Moscow Mathematical Society</a>, <a href="https://www.hse.ru/en/staff/arjantsev">Ivan
 Arjantsev’s</a> (he was the scientific advisor of mine) seminar on the additive group
 actions, and participated in <a href="https://en.wikipedia.org/wiki/Dessin_d%27enfant">dessin d’enfant</a> seminar of <a href="http://www.mathnet.ru/person19967">George
-Shabat</a> in the past.
-I’ve also took few courses at <a href="http://ium.mccme.ru">Independent University of Moscow</a>.</p>
+Shabat</a> in the past. 
+I’ve also took few courses at <a href="http://ium.mccme.ru">Independent University of Moscow</a>. </p>
+
+Not very mathematical fields: linguistics, cryptography.
+
+
 
 <h3 id="business">Business</h3>
 
@@ -101,12 +104,13 @@ library dependencies. Here are some examples:</p>
 
 <p>I’ve been a bit involved in <a href="https://handshake.org/">Handshake</a> project, with tiny contribution to the node and protocol. I’ve also (not solely) built public block explorer: <a href="https://hnsnetwork.com">hnsnetwork.com</a>.</p>
 
-<p>Now (2021) I’m mostly doing ethereum-related development. For example NFT projects: <a href="https://exponentials.art/">Exponentials</a>, <a href="https://logarithms.art/">Logarithms</a> </p>
+<p>In 2021 I was mostly doing ethereum-related development. For example NFT projects: <a href="https://exponentials.art/">Exponentials</a>, <a href="https://logarithms.art/">Logarithms</a> </p>
     
 <p>I’m open for interesting proposals.</p>
 
 <h3 id="also">Also</h3>
 <ol>
+  <li><a href ="/materials/algorithmic_randomness.pdf">Algorithmic randomness</a></li>
   <li><a name="articles"> Educational cryptography articles</a>
     <ul>
       <li><a href="/materials/aes.pdf">AES</a></li>
