--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
 <h3 id="academic-and-education">Academic and education</h3>
 <p>Gaining knoweldge seems natural to me and I had interest in many things, varying from linguistics and cryptography to quantum physics and cosmology. Still, I’d introduce myself as a mathematician.</p>
 
-<p>Graduated from Belarusian State University with bachelor’s degree thesis: the density of Cartan subalgebras in the variety of abelian subalgebras of complex semisimple Lie algebras.
+<p>Graduated from Belarusian State University with specialist degree thesis: the density of Cartan subalgebras in the variety of abelian subalgebras of complex semisimple Lie algebras.
 Then I’ve spent a year on master’s programme in mathematics at <a href="https://math.hse.ru/en/">HSE faculty of mathematics</a> with term paper topic: structure of the automorphism group of a finite-dimensional associative algebra.</p>
 
 <p>In 2022 I’'ve finished <a href="http://master.math.univ-paris-diderot.fr/en/annee/m2-lmfi/">Master’s in Mathematical
     Logic and Foundations of Computer Science</a> at University of Paris. Master's paper is about <a href ="/materials/algorithmic_randomness.pdf">Algorithmic randomness</a>.</p>
-
 <div>
-My mathematical background with usual fields like topology, algebra and analysis, differential and algebraic geometry, <div style="display: inline" aria-label="it has nothing in common with the
- falsehood" data-balloon-pos="up">Lie theory</div>, category theory, theoretical computer science, logic, model theory, classical physics
+My mathematical background comes with usual fields like topology, algebra and analysis, differential and algebraic geometry, <div style="display: inline" aria-label="it has nothing in common with the
+ falsehood" data-balloon-pos="up">Lie theory</div>, category theory, theoretical computer science, logic, Kolmogorov
+ complexity, model theory, classical physics
 as well as a bit of <div aria-label="these fields are not less mathematics than physics" data-balloon-pos="up">relativity and quantum physics</div> and computational mathematics.
 </div>
 
