--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 Then I’ve spent a year on master’s programme in mathematics at <a href="https://math.hse.ru/en/">HSE faculty of mathematics</a> with term paper topic: structure of the automorphism group of a finite-dimensional associative algebra.</p>
 
 <p>In 2022 I’'ve finished <a href="http://master.math.univ-paris-diderot.fr/en/annee/m2-lmfi/">Master’s in Mathematical
-    Logic and Foundations of Computer Science</a> at University of Paris. Master's paper is about <a href ="/materials/algorithmic-randomness.pdf">Algorithmic randomness</a>.</p>
+    Logic and Foundations of Computer Science</a> at University of Paris. Master's paper is about <a href ="/materials/algorithmic-randomness.pdf">algorithmic randomness</a>.</p>
 <div>
 My mathematical background comes with usual fields like topology, algebra and analysis, differential and algebraic geometry, <div style="display: inline" aria-label="it has nothing in common with the
  falsehood" data-balloon-pos="up">Lie theory</div>, category theory, theoretical computer science, logic, Kolmogorov
