--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Not very mathematical fields: linguistics, cryptography.
 <h3 id="business">Business</h3>
 
 <div>Long time ago I was a freelancer, doing some web development, maintaining cryptographic gem, creating
-proof-of-concept solutions (for example in <a href="https://en.wikipedia.org/wiki/Haskell_(programming_language)">haskell</a>), and even <div aria-label="could you
+proof-of-concept solutions, and even <div aria-label="could you
 think such a work is done by freelancers?" data-balloon-pos="up">writing educational <a href="#articles">articles</a> about cryptography.
 </div></div>
 
