--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <h2 id="bio">Bio</h2>
 
 <h3 id="academic-and-education">Academic and education</h3>
-<p>Gaining knoweldge seems natural to me and I had interest in many things, varying from linguistics and cryptography to quantum physics and cosmology. Still, I’d introduce myself as a mathematician.</p>
+<p>Gaining knoweldge seems natural to me and I have interest in many things, varying from linguistics and cryptography to quantum physics and cosmology. Still, I’d introduce myself as a mathematician.</p>
 
 <p>Graduated from Belarusian State University with specialist degree thesis: the density of Cartan subalgebras in the variety of abelian subalgebras of complex semisimple Lie algebras.
 Then I’ve spent a year on master’s programme in mathematics at <a href="https://math.hse.ru/en/">HSE faculty of mathematics</a> with term paper topic: structure of the automorphism group of a finite-dimensional associative algebra.</p>
