--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ library dependencies. Here are some examples:</p>
 
 <p>I’ve been a bit involved in <a href="https://handshake.org/">Handshake</a> project, with tiny contribution to the node and protocol. I’ve also (not solely) built public block explorer: <a href="https://hnsnetwork.com">hnsnetwork.com</a>.</p>
 
-<p>In 2021 I was mostly doing ethereum-related development. For example NFT projects: <a href="https://exponentials.art/">Exponentials</a>, <a href="https://logarithms.art/">Logarithms</a> </p>
+<p>In 2021 I was mostly doing ethereum-related development. For example NFT projects: <a href="https://exponentials.art/">Exponentials</a>, <a href="https://logarithms.art/">Logarithms</a>(domains expired, <a href="https://34.66.145.114/"> working mirror </a>.</p>
     
 <p>I’m open for interesting proposals.</p>
 
