--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@ library dependencies. Here are some examples:</p>
 <p>In 2021 I was mostly doing ethereum-related development. For example NFT projects: <a href="https://exponentials.art/">Exponentials</a>, <a href="https://logarithms.art/">Logarithms</a> (domains had expired, <a href="https://34.66.145.114/"> mirror </a>).</p>
     
 <p>I’m open for interesting proposals.</p>
+<h3 id="cv">Boring stuff</h3>
+      <a href="/materials/cv.pdf">CV</a>
 
 <h3 id="also">Also</h3>
 <ol>
